# hack-indies

./: .env.example  .gitignore  AGENTS.md  IDEAS_CONEXIONES.md  docker-compose.yml  justfile  skills-lock.json
.github/workflows/: fly-deploy.yml
backend/services/api/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/services/api/mcp-servers/: github-mcp.mjs  package.json  vercel-mcp.mjs
backend/services/api/src/: audit_playbooks.py  config.py  crypto.py  main.py  session_store.py  shared_schemas.py
backend/services/api/src/agents/: inspector.py  model_factory.py  openrouter_model.py  operator.py  orchestrator.py  watcher.py
backend/services/api/src/memory/: embedder.py  extractor.py  retriever.py
backend/services/api/src/routes/: alerts.py  chat.py  connections.py  dashboard.py  profiles.py  sse.py
backend/services/api/src/tools/: hibp_tools.py  mcp_connector.py  supabase_tools.py
backend/services/api/tests/: conftest.py
backend/services/api/tests/unit/: test_agents.py  test_model_factory.py
backend/shared/src/hackindies/: schemas.py
docs/: 01-arquitectura.md  02-schema-db.sql  03-setup.md  04-api-reference.md
frontend/: package.json  pnpm-lock.yaml
frontend/apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/apps/web/src/app/: globals.css  layout.tsx  page.tsx
frontend/apps/web/src/contexts/: ApiContext.tsx
frontend/apps/web/src/hooks/: useAgentLogs.ts  useApi.ts  useAuth.ts  useChat.ts  useDashboard.ts
frontend/apps/web/src/lib/: api.ts  utils.ts
(+29 files in other folders)
