[project]
name = "hackindies-api"
version = "0.1.0"
description = "HackIndie CISO Virtual - Backend API with ADK Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-adk>=1.33.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.0",
    "openai>=1.50.0",
    "pynacl>=1.5.0",
    "slowapi>=0.1.9",
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]


